[package]
name = "e5172as22-traffic-stanley-driver"
version = "3.0.0"
repository = "https://gitlab.com/claudio.mattera/e5172as22-traffic-stanley-driver"
authors = ["Claudio Mattera <claudio@mattera.it>"]
description = "Track traffic in router Huawei E5172As-22 and stores in a Stanley database"
edition = "2018"
license = "MIT"
publish = false

[lib]
name = "traffic"
path = "src/lib.rs"

[[bin]]
name = "e5172as22-traffic-stanley-driver"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33"
chrono = "0.4"
base64 = "0.11"


[dependencies.reqwest]
version = "0.9"
default-features = false
features = ["rustls-tls"]
